<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Background2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_dark_pink"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/large_white_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/setting_title" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical" >

            <TextView
                style="@style/black_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/setting_notification_setting" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#f8f8f8"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical" >

                    <TextView
                        style="@style/black_text_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:gravity="left"
                        android:text="@string/setting_notification_receive" />

                    <ToggleButton
                        android:id="@+id/setting_tgb_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/switch_state"
                        android:checked="true"
                        android:textColor="@android:color/transparent" />
                </RelativeLayout>

                <View style="@style/hor_gray_devider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical" >

                    <TextView
                        style="@style/black_text_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:gravity="left"
                        android:text="@string/setting_notification_vibrate" />

                    <ToggleButton
                        android:id="@+id/setting_chk_vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/switch_state2"
                        android:checked="true"
                        android:textColor="@android:color/transparent" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical" >

                    <TextView
                        style="@style/black_text_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:gravity="left"
                        android:text="@string/setting_notification_sound" />

                    <ToggleButton
                        android:id="@+id/setting_chk_sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/switch_state2"
                        android:checked="true"
                        android:textColor="@android:color/transparent" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical" >

                    <TextView
                        style="@style/black_text_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:gravity="left"
                        android:text="@string/setting_notification_led" />

                    <ToggleButton
                        android:id="@+id/setting_chk_led"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/switch_state2"
                        android:checked="true"
                        android:textColor="@android:color/transparent" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                style="@style/black_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/setting_version" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#f8f8f8"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/setting_tv_version"
                    style="@style/black_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/setting_new_version"
                    style="@style/black_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="#FF0000" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                style="@style/white_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_gray2_button"
                android:text="@string/setting_login" />

            <Button
                android:id="@+id/btn_cscenter"
                style="@style/white_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_blue1_button"
                android:text="@string/cscenter" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>